# euchre-rust

./: Cargo.toml  index.html
src/: args.rs  bid_controls.rs  bid_result.rs  bid_state.rs  card.rs  deck.rs  euchre.rs  euchre.scss  game_state.rs  hand.rs  hand_state.rs  hands_iterator.rs  logger.rs  main.rs  player.rs  player_area.rs  players.rs  playing_surface.rs  position.rs  rank.rs  rank_with_bowers.rs  suit.rs  trick_state.rs
src/players/: advanced.rs  basic.rs  minimal.rs  preprogrammed_bidder.rs  wrapper.rs
