[package]
name = "euchre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "~0.8.5"
enum-iterator = "~0.8"
log = "0.4.17"
rayon = "1.6.1"
num-format = "0.4.4"
dyn-clonable = "0.9.0"

[dev-dependencies]
test-case = "2.2.2"
